samples/errors/negate_string.lox
// Error: Cannot negate a string
// expect: runtime error
print -"hello";
